- Fixed: Inactive Memberships still available for renewal
- Fixed: BP activation page is always protected in multisite
- Fixed: Some unexpected notices and warnings
- Fixed: Input validation of registration page fails to redirect to correct page when shortcode is used
- Fixed: Price on SignUp page not shows correctly for the administrator

- Fixed: Display name was not being saved from edit account page
- Fixed: Buddy Press extended profile fields data not showing on Membership 2 My Account page

- Removed: Filter `ms_class_file_override`

1.0.2.9
----------------------------------------------------------------------
- Fixed: Version change

1.0.2.8
----------------------------------------------------------------------
- Added: New import option to import each membership on its own, to prevent memory- or similar overflow issues.
- Added: Settings for PayPal gateways now also list the country "Croatia".
- Added: Filters  'ms_helper_color_index' and 'ms_model_membership_get_color'
- Improved: Memberships can't be assigned to admin users any longer
- Fixed: IE and Edge users can now log in from front end again
- Fixed: Import of M1 data now correctly creates recurring memberships.
- Fixed: For people who saw a PHP notice "WDEV_DEBUG is undefined": It's gone!
- Fixed: Missing translation string added.
- Fixed: Redirect add on works properly again
- Fixed: Nickname now saves when BuddyPress profile fields add on is activated
- Fixed: Missing string in default lost password default email no longer missing
- Fixed: Media protection no longer breaks images in customizer

1.0.2.7
----------------------------------------------------------------------
- Added: Constant 'MS_LOG_EMAILS' to enable log and display email logs
- Added: Constant 'MS_PROTECTED_MESSAGE_REVERSE_RULE' to implement reverse logic on membership based protection message
- Added: Bulk Delete Membership feature