@@ -24,6 +24,7 @@ Change Log:
 - Fixed: Some unexpected notices and warnings
 - Fixed: Input validation of registration page fails to redirect to correct page when shortcode is used
 - Fixed: Price on SignUp page not shows correctly for the administrator
+- Fixed: Deleting an user doesn't not remove the membership information from Membership page
 
 - Fixed: Display name was not being saved from edit account page
 - Fixed: Buddy Press extended profile fields data not showing on Membership 2 My Account page
